# darkness-engine

./: BuildVC2008.md  CMakeLists.txt  Doxyfile  Main.md  ProjectHome.md  clean.sh  precompile.sh  strip.sh  svnsetprop.sh
branches/backtest/: TODO  precompiled.h
branches/backtest/src/client/: BSP.cpp  BSP.h  CMakeLists.txt  Camera.h  Client.cpp  Client.h  Context.h  Font.cpp  Frustum.h  MD2.cpp  Main.h  Model.h  Render.cpp  Render.h  Shape.cpp  Skybox.cpp  SoundManager.cpp  SoundManager.h  SparkGenRender.cpp  SparkGenRender.h  Terrain.cpp
branches/backtest/templates/: cpp
dark/: CMakeLists.txt  Doxyfile  README  TODO  clean.sh  precompiled.h  svnprops.sh  svnsetprop.sh
dark/src/: CMakeLists.txt  precompiled.h
dark/src/base/: Bitset.h  CMakeLists.txt  Config.cpp  Config.h  DList.h  HashIndex.h  HashString.h  List.h  LogFile.cpp  LogFile.h  Mat33.h  Mat44.h  Math.cpp  Math.h  Pool.h  PoolAlloc.h  Quat.h  Reuser.h  SVector.h  Sparse.h  String.h  Vec3.h  Vector.h  base.h  common.h  precompiled.h
dark/src/client/: BSP.cpp  BSP.h  BSP_Dual.cpp  BSP_Dual.h  CMakeLists.txt  Camera.cpp  Camera.h  Client.cpp  Client.h  Context.cpp  Context.h  Font.cpp  Font.h  Frustum.h  Graphics_BSP.cpp  Graphics_BSP.h  Graphics_Context.cpp  Graphics_Context.h  Graphics_Font.cpp  Graphics_Font.h  Graphics_Frustum.cpp  Graphics_Frustum.h  Graphics_MD2.cpp  Graphics_Model.cpp  Graphics_Model.h  Graphics_Render.cpp  Graphics_Render.h  Graphics_Shape.cpp  Graphics_Shape.h  Graphics_Sky.cpp  Graphics_Sky.h  Graphics_Skybox.cpp  Graphics_Skybox.h  Graphics_SparkGen.cpp  Graphics_SparkGen.h  Graphics_SparkGenRender.cpp  Graphics_Terrain.cpp  Graphics_Terrain.h  Graphics_Water.cpp  Graphics_Water.h  (+34 more)
dark/src/matrix/: AABB.cpp  AABB.h  BSP.cpp  BSP.h  B_Goblin.cpp  B_Goblin.h  B_Human.cpp  B_Human.h  B_Spirit.cpp  B_Spirit.h  Bot.h  Bounds.h  CMakeLists.txt  Collider.cpp  Collider.h  D_BigCrate.cpp  D_BigCrate.h  D_MetalBarrel.cpp  D_MetalBarrel.h  D_SmallCrate.cpp  D_SmallCrate.h  D_WoodBarrel.cpp  D_WoodBarrel.h  DynObject.cpp  DynObject.h  Effect.cpp  Effect.h  Event.h  Hit.h  Item.cpp  Ladder.cpp  Ladder.h  Matrix.cpp  Matrix.h  O_Tree1.cpp  O_Tree1.h  O_Tree2.cpp  O_Tree2.h  Object.cpp  Object.h  (+28 more)
dark/src/nirvana/: CMakeLists.txt  M_Walker.cpp  M_Walker.h  Mind.cpp  Mind.h  Nirvana.cpp  Nirvana.h  Soul.cpp
dark/src/server/: Main.cpp  Main.h  Server.h
dark/src/test/: CMakeLists.txt  foreach.cpp  pool.cpp  register.cpp  test.cpp
doc/: hashspaceUsage.octave
src/: CMakeLists.txt
src/base/: Bitset.h  Config.cpp  Config.h  HashIndex.h  List.h  Mat44.h  Math.h  Reuser.h  SVector.h  Sparse.h  String.h  Vector.h  base.h  common.h  precompiled.h
src/client/: BSP.cpp  BSP.h  Camera.cpp  Client.cpp  Context.cpp  Context.h  Font.cpp  Font.h  Frustum.cpp  Graphics_BSP.cpp  Graphics_Frustum.cpp  Graphics_MD2.h  Graphics_Shape.h  Graphics_SparkGen.cpp  Graphics_Terrain.cpp  Graphics_Water.cpp  Graphics_Water.h  MD2.cpp  MD2.h  MD3.cpp  MD3.h  Main.cpp  Model.cpp  Render.h  Shape.h  Sky.h  Skybox.h  SoundManager.cpp  SoundManager.h  Terrain.cpp  Terrain.h  Water.cpp  Water.h
src/matrix/: AABB.cpp  AABB.h  BSP.cpp  B_Goblin.cpp  B_Spirit.h  Bounds.h  CMakeLists.txt  Collider.cpp  Collider.h  D_BigCrate.cpp  D_MetalBarrel.cpp  D_MetalBarrel.h  D_SmallCrate.cpp  D_SmallCrate.h  D_WoodBarrel.cpp  D_WoodBarrel.h  DynObject.cpp  DynObject.h  Hit.h  Item.cpp  Item.h  Ladder.h  Matrix.cpp  Matrix.h  O_Tree1.cpp  O_Tree2.cpp  O_Tree2.h  Object.cpp  Object.h  Particle.cpp  Particle.h  Physics.cpp  Physics.h  Sky.cpp  Sound.h  SparkGen.h  Structure.cpp  Structure.h  Terrain.cpp  Terrain.h  (+8 more)
src/nirvana/: CMakeLists.txt  M_Walker.cpp  M_Walker.h  Mind.cpp  Soul.cpp  Soul.h
src/server/: Server.cpp
src/test/: CMakeLists.txt  foreach.cpp  pool.cpp
templates/: cpp  h
trunk/: precompile.sh
trunk/dark/: BUILD.win32  CMakeLists.txt  Doxyfile  README  TODO  clean.sh  count.sh
trunk/dark/doc/: hashspaceUsage.octave
trunk/dark/src/: CMakeLists.txt  precompiled.h
trunk/dark/src/base/: Bitset.h  CMakeLists.txt  CVector.h  Config.cpp  Config.h  DList.h  HashIndex.h  HashString.h  List.h  LogFile.cpp  LogFile.h  Mat33.h  Mat44.h  Math.cpp  Math.h  Pool.h  PoolAlloc.h  Quat.h  ReuseAlloc.h  Reuser.h  SVector.h  String.h  Vec3.h  Vector.h  base.h  common.h  precompiled.h
trunk/dark/src/client/: BSP.cpp  BSP.h  BSP_Dual.cpp  BSP_Dual.h  CMakeLists.txt  Camera.cpp  Camera.h  Client.cpp  Client.h  Context.cpp  Context.h  Font.cpp  Font.h  Frustum.cpp  Frustum.h  Graphics_BSP.cpp  Graphics_BSP.h  Graphics_Context.cpp  Graphics_Context.h  Graphics_Font.cpp  Graphics_Font.h  Graphics_Frustum.cpp  Graphics_Frustum.h  Graphics_MD2.cpp  Graphics_MD2.h  Graphics_Model.cpp  Graphics_Model.h  Graphics_Render.cpp  Graphics_Render.h  Graphics_Shape.cpp  Graphics_Shape.h  Graphics_Sky.cpp  Graphics_Sky.h  Graphics_Skybox.cpp  Graphics_Skybox.h  Graphics_SparkGen.cpp  Graphics_SparkGen.h  Graphics_SparkGenRender.h  Graphics_Terrain.cpp  Graphics_Terrain.h  (+39 more)
trunk/dark/src/matrix/: AABB.cpp  AABB.h  BSP.cpp  BSP.h  B_Goblin.cpp  B_Goblin.h  B_Human.cpp  B_Human.h  B_Spirit.cpp  B_Spirit.h  Bot.h  Bounds.h  CMakeLists.txt  Collider.cpp  Collider.h  D_BigCrate.cpp  D_BigCrate.h  D_MetalBarrel.cpp  D_MetalBarrel.h  D_SmallCrate.cpp  D_SmallCrate.h  D_WoodBarrel.cpp  D_WoodBarrel.h  DynObject.cpp  DynObject.h  Effect.h  Event.cpp  Hit.h  Item.cpp  Item.h  Ladder.cpp  Ladder.h  Matrix.cpp  Matrix.h  O_Tree1.cpp  O_Tree1.h  O_Tree2.cpp  O_Tree2.h  Object.cpp  Object.h  (+26 more)
trunk/dark/src/nirvana/: CMakeLists.txt  M_Walker.cpp  M_Walker.h  Mind.cpp  Mind.h  Nirvana.cpp  Nirvana.h  Soul.cpp  Soul.h
trunk/dark/src/server/: CMakeLists.txt  Main.cpp  Main.h  Server.cpp  Server.h
trunk/dark/src/test/: CMakeLists.txt  foreach.cpp  quicksort.cpp  test.cpp
trunk/dark/templates/: h
trunk/src/base/: DList.h  List.h  LogFile.cpp  Math.cpp  String.h
trunk/src/client/: CMakeLists.txt  Graphics_BSP.h  Graphics_Context.cpp  Graphics_Font.cpp  Graphics_Render.cpp  Graphics_Sky.cpp  Graphics_Skybox.h  (+1 more)
wiki/: BuildVC2008.wiki  Main.wiki
(+68 files in other folders)
