ADD_LIBRARY( matrix STATIC
  AABB.cpp
  AABB.h
  BSP.cpp
  BSP.h
  B_Goblin.cpp
  B_Goblin.h
  B_Human.cpp
  B_Human.h
  B_Spirit.cpp
  B_Spirit.h
  Bot.h
  Bounds.h
  Collider.cpp
  Collider.h
  D_BigCrate.cpp
  D_BigCrate.h
  D_MetalBarrel.cpp
  D_MetalBarrel.h
  D_SmallCrate.cpp
  D_SmallCrate.h
  D_WoodBarrel.cpp
  D_WoodBarrel.h
  DynObject.cpp
  DynObject.h
  Effect.h
  Hit.h
  Item.cpp
  Item.h
  Ladder.cpp
  Ladder.h
  Matrix.cpp
  Matrix.h
  O_Tree1.cpp
  O_Tree1.h
  O_Tree2.cpp
  O_Tree2.h
  Object.cpp
  Object.h
  Particle.cpp
  Particle.h
  Physics.cpp
  Physics.h
  Sky.cpp
  Sky.h
  SparkGen.cpp
  SparkGen.h
  Sphere.h
  Structure.cpp
  Structure.h
  Terrain.cpp
  Terrain.h
  Timer.cpp
  Timer.h
  Translator.h
  Translator.cpp
  Vehicle.cpp
  Vehicle.h
  Water.cpp
  Water.h
  Weapon.cpp
  Weapon.h
  World.cpp
  World.h
  bv.h )

ADD_DEPENDENCIES( matrix precompile )
